Rename objects in .yml files

--- a/templates/cron-mysqldump/dbdump-cron.yml
+++ b/templates/cron-mysqldump/dbdump-cron.yml
@@ -32,5 +32,6 @@ spec:
           - name: config-volume
             configMap:
               defaultMode: 0700
-              name: configmap-dbdump
+              name: dbdump-configmap
+
   
